# airport-search

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: .env  .env.example  README.md  main.py  pyproject.toml
apps/backend/app/api/: fetch_airports.py  ingest.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  airport.py  ingest.py
apps/backend/app/schemas/: airport.py  ingest.py
apps/backend/app/services/: airport.py  ingest.py
apps/backend/migrations/: 001_add_search_indexes.sql  001_setup_search.sql  002_drop_tsvector.sql  003_add_region_to_trigram_index.sql
apps/web/src/: App.css  App.tsx
apps/web/src/components/: AirportSearch.tsx
