[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
